--- a/src/game/_Game.scss
+++ b/src/game/_Game.scss
@@ -18,15 +18,15 @@
 	bottom: 0;
 }
 
-$colors: blue, green, orange, yellow, white;
+$token-colors: blue, green, orange, yellow, white;
 
-@for $i from 1 through length($colors) {
+@for $i from 1 through length($token-colors) {
 	.token-#{$i} {
 		width: 80px;
 		height: 30px;
 		border-radius: 5px;
 		margin: 5px;
 		text-align: center;
-		background-color: nth($colors, $i);
+		background-color: nth($token-colors, $i);
 	}
 }
