--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,4 @@
-body {
-  background: #55aa99;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 .board {
   display: grid;
   grid-template-columns: repeat(auto-fit, 120px);
@@ -64,6 +61,68 @@ body {
   margin: 5px;
   text-align: center;
   background-color: white;
+}
+
+body {
+  color: white;
+  font-family: "Amaranth", sans-serif;
+  background: #384a5d;
+}
+
+#lobby-container {
+  position: absolute;
+  width: 500px;
+  height: 300px;
+  left: 50%;
+  top: 40%;
+  margin-left: -250px;
+  margin-top: -150px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 20% 80%;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+#lobby-name {
+  grid-column: 1/3;
+  grid-row: 1;
+  margin: auto;
+  display: flex;
+}
+
+#lobby-join {
+  grid-column: 1;
+  grid-row: 2;
+  margin: auto;
+}
+
+#lobby-create {
+  grid-column: 2;
+  grid-row: 2;
+  margin: auto;
+}
+
+.center {
+  text-align: center;
+}
+
+.lobby {
+  font-size: 24px;
+}
+
+input[type=text] {
+  font-family: "Amaranth", sans-serif;
+  font-size: 24px;
+  border-radius: 4px;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  border-color: transparent;
 }
 
 /*# sourceMappingURL=style.css.map */
