--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import "../node_modules/bootstrap/scss/bootstrap";
 @import 'game/Game';
 
 // http://paletton.com/#uid=70j0u0kdXo45iA+9usMhTk2mtgd
@@ -9,14 +9,13 @@ $color-4: #C0886C;
 
 body {
 	color: white;
-	font-family: 'Amaranth', sans-serif;
 	background: darken($color-1, 10%);
 }
 
 $lobby-width: 500px;
 $lobby-height: 300px;
 
-#lobby-container {
+.lobby {
 	// position
 	position: absolute;
 	width: $lobby-width;
@@ -25,52 +24,30 @@ $lobby-height: 300px;
 	top: 40%;
 	margin-left: -$lobby-width/2;
 	margin-top: -$lobby-height/2;
-	// inside
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 20% 80%;
-	border-style: solid;
-	border-color: white;
-	border-width: 2px;
-	border-radius: 10px;
-	padding: 20px;
 	// other
 	background-color: rgba(white, 0.1);
 }
 
-#lobby-name {
+#entry-container {
+	// inside
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 20% 80%;
+	border-radius: 10px;
+	padding: 20px;
+}
+
+#entry-name {
 	grid-column: 1 / 3;
 	grid-row: 1;
 	margin: auto;
 	display: flex;
 }
 
-#lobby-join {
-	grid-column: 1;
-	grid-row: 2;
-	margin: auto;
-}
-
-#lobby-create {
-	grid-column: 2;
-	grid-row: 2;
-	margin: auto;
-}
-
 .center {
 	text-align: center;
 }
 
-.lobby {
-	font-size: 24px;
-}
-
-input[type=text] {
-	font-family: 'Amaranth', sans-serif;
-	font-size: 24px;
-	border-radius: 4px;
-	outline: none;
-	box-shadow: none;
-	border: none;
-	border-color: transparent;
+.btn{
+	box-shadow: none !important;
 }
