--- a/src/game/_Game.scss
+++ b/src/game/_Game.scss
@@ -61,3 +61,11 @@ $token-colors: blue, green, orange, yellow, white;
 	background: rgba(255, 255, 255, 0.3);
 	margin: 1rem;
 }
+
+.tape {
+	background: red;
+}
+
+.cucumber {
+	background: green;
+}
