--- a/src/style.scss
+++ b/src/style.scss
@@ -33,7 +33,7 @@ $lobby-height: 300px;
 	// inside
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 20% 80%;
+	grid-template-rows: 40% 60%;
 	border-radius: 10px;
 	padding: 20px;
 }
@@ -43,6 +43,11 @@ $lobby-height: 300px;
 	grid-row: 1;
 	margin: auto;
 	display: flex;
+}
+
+#entry-server {
+	grid-column: 1 / 3;
+	grid-row: 1;
 }
 
 .center {
