--- a/src/game/_Game.scss
+++ b/src/game/_Game.scss
@@ -64,6 +64,9 @@ $token-colors: blue, green, orange, yellow, white;
 	width: 100px;
 	background: rgba(255, 255, 255, 0.3);
 	margin: 1rem;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	color: white;
 }
 
 .tape {
