--- a/src/style.scss
+++ b/src/style.scss
@@ -27,6 +27,8 @@ $lobby-height: 300px;
 	// other
 	color: white;
 	background-color: rgba(white, 0.1);
+	padding: 1rem;
+	border-radius: 0.5rem;
 }
 
 #entry-container {
