--- a/src/style.css
+++ b/src/style.css
@@ -7826,23 +7826,23 @@ a.text-dark:hover, a.text-dark:focus {
   margin: 5px;
   text-align: center; }
 
-.tokencolor-1 {
+.tokencolor-0 {
   background: blue;
   color: white; }
 
-.tokencolor-2 {
+.tokencolor-1 {
   background: green;
   color: white; }
 
-.tokencolor-3 {
+.tokencolor-2 {
   background: orange;
   color: black; }
 
-.tokencolor-4 {
+.tokencolor-3 {
   background: yellow;
   color: black; }
 
-.tokencolor-5 {
+.tokencolor-4 {
   background: white;
   color: black; }
 
@@ -7875,6 +7875,12 @@ a.text-dark:hover, a.text-dark:focus {
 .control {
   margin: 20px; }
 
+.log-area {
+  width: 500px;
+  height: 300px;
+  overflow-y: scroll;
+  color: white; }
+
 body {
   background: #384a5d;
   padding: 1rem; }
@@ -7895,9 +7901,9 @@ body {
 #entry-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 40% 60%;
+  grid-template-rows: 35% 60% 5%;
   border-radius: 10px;
-  padding: 20px; }
+  padding: 1rem; }
 
 #entry-name {
   grid-column: 1 / 3;
