--- a/src/style.scss
+++ b/src/style.scss
@@ -35,9 +35,9 @@ $lobby-height: 300px;
 	// inside
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: 40% 60%;
+	grid-template-rows: 35% 60% 5%;
 	border-radius: 10px;
-	padding: 20px;
+	padding: 1rem;
 }
 
 #entry-name {
