--- a/src/game/_Game.scss
+++ b/src/game/_Game.scss
@@ -22,7 +22,7 @@
 	bottom: 0;
 }
 
-$token-colors: blue, green, orange, yellow, white;
+$token-colors: blue, green, orange, yellow, white, purple;
 
 .token {
 		width: 80px;
