--- a/src/game/_Game.scss
+++ b/src/game/_Game.scss
@@ -1,11 +1,16 @@
+#racetrack-wrapper {
+	width: 100%;
+	overflow: scroll;
+}
+
 .board {
-	display: grid;
+	display: inline-flex;
 	grid-template-columns: repeat(auto-fit, 120px);
 	margin: 20px 0;
 }
 
 .cell {
-	// width: 80px;
+	width: 120px;
 	height: 120px;
 	background-color: rgba(255, 255, 255, 0.8);
 	border-radius: 3px;
