--- a/src/game/_Game.scss
+++ b/src/game/_Game.scss
@@ -43,6 +43,10 @@ $tokenmargin: 5px;
 	bottom: 0;
 }
 
+.card.cell-mod {
+	margin: 5px;
+}
+
 $token-colors: blue, green, orange, yellow, white, purple;
 
 .cat {
