--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
-@import 'game/Game';
+// @import 'game/Game';
 
 // http://paletton.com/#uid=70j0u0kdXo45iA+9usMhTk2mtgd
 $color-1: #4B637D;
