--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -49,6 +49,44 @@ $token-colors: blue, green, orange, yellow, white, purple;
 		display: flex;
 	}
 
+	// need to set parent's display to table
+	.center-table {
+		text-align: center;
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+	.dice-size {
+		border-radius: 10px;
+		width: 60px;
+		height: 60px;
+	}
+
+	.center {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.card-shape {
+		width: 100px;
+		height: 140px;
+		border-radius: 10px;
+	}
+	.card-standard {
+		@extend .card-shape;
+		border: solid 5px white;
+		box-shadow: 1px 1px 3px rgba(black, 1);
+	}
+
+	.circle-shape {
+		border-radius: 50%;
+	}
+	.empty-area {
+		color: $fade-white;
+		border: solid 3px $fade-white;
+	}
+
 	.log-area {
 		width: 500px;
 		height: 300px;
@@ -70,8 +108,9 @@ $token-colors: blue, green, orange, yellow, white, purple;
 		}
 
 		.player-card {
+			overflow: hidden;
 			background: rgba(white, 0.3);
-			border-radius: 5px;
+			border-radius: 10px;
 			margin: 5px;
 			color: black;
 			// grid
@@ -79,7 +118,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			grid-template-columns: 100px auto;
 
 			&.current {
-				border: solid 1px yellow;
+				border: solid 3px yellow;
 			}
 
 			.player-details {
@@ -158,19 +197,13 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			width: 400px;
 			display: flex;
 			position: absolute;
-			top: 350px;
+			top: 320px;
 			left: 50%;
 			transform: translateX(-50%);
 		}
 
 		.betzone {
-			height: 100px;
-			width: 100px;
-			background: rgba(255, 255, 255, 0.3);
-			margin: 1rem;
-			padding: 1rem;
-			border-radius: 0.5rem;
-			color: white;
+			display: table;
 		}
 		.betzone-win {
 			margin-left: auto;
@@ -181,7 +214,8 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			#main-dice {
 				color: $fade-white;
 				cursor: default;
-				&.active {
+				&.active .empty-area {
+					border-color: white;
 					color: white;
 					cursor: pointer;
 					transition-duration: 0.1s;
@@ -192,44 +226,6 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			}	
 		}
 		
-	}
-
-	.dice-text-wrapper {
-		display: table-cell;
-		vertical-align: middle;
-		&.parent {
-			display: table;
-		}	
-	}
-
-	.dice-size {
-		border-radius: 10px;
-		width: 60px;
-		height: 60px;
-	}
-
-	.center {
-		position: absolute;
-		left: 50%;
-		transform: translateX(-50%);
-	}
-
-	.card-shape {
-		width: 100px;
-		height: 140px;
-		border-radius: 10px;
-	}
-	.card-standard {
-		@extend .card-shape;
-		border: solid 5px white;
-		box-shadow: 1px 1px 3px rgba(black, 1);
-	}
-
-	.circle-shape {
-		border-radius: 50%;
-	}
-	.empty-area {
-		border: solid 3px $fade-white;
 	}
 
 	#camp {
@@ -251,7 +247,6 @@ $token-colors: blue, green, orange, yellow, white, purple;
 				}
 			}
 			.rolled-dice {
-				text-align: center;
 				margin-left: auto;
 				margin-right: auto;
 				width: 40px;
