--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -202,7 +202,7 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			transform: translateX(-50%);
 		}
 
-		.betzone {
+		.di-table {
 			display: table;
 		}
 		.betzone-win {
