--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -20,19 +20,6 @@ $token-colors: blue, green, orange, yellow, white, purple;
 
 #game {
 
-	@for $i from 0 through length($token-colors) - 1 {
-		.tokencolor-#{$i} {
-			background: nth($token-colors, $i+1);
-			$x: nth($token-colors, $i+1);
-			@if 0.2126*red($x) + 0.7152*green($x) + 0.0722*blue($x) > 96% {
-				color: black;
-			}
-			@else {
-				color: white;
-			}
-		}
-	}
-
 	height: 100vh;
 	width: 100vw;
 	color: white;
@@ -76,7 +63,21 @@ $token-colors: blue, green, orange, yellow, white, purple;
 	.card-standard {
 		@extend .card-shape;
 		border: solid 5px white;
+		background: black;
 		box-shadow: 1px 1px 3px rgba(black, 1);
+	}
+
+	@for $i from 0 through length($token-colors) - 1 {
+		.tokencolor-#{$i} {
+			background: nth($token-colors, $i+1);
+			$x: nth($token-colors, $i+1);
+			@if 0.2126*red($x) + 0.7152*green($x) + 0.0722*blue($x) > 96% {
+				color: black;
+			}
+			@else {
+				color: white;
+			}
+		}
 	}
 
 	.circle-shape {
@@ -85,6 +86,12 @@ $token-colors: blue, green, orange, yellow, white, purple;
 	.empty-area {
 		color: $fade-white;
 		border: solid 3px $fade-white;
+	}
+
+	.small-stack {
+		width: 120px;
+		height: 160px;
+		position: relative;
 	}
 
 	.log-area {
@@ -238,11 +245,6 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			position: absolute;
 			left: 50%;
 			transform-origin: 50% 300%;
-			.small-stack {
-				width: 120px;
-				height: 160px;
-				position: relative;
-			}
 			.rolled-dice {
 				margin-left: auto;
 				margin-right: auto;
