--- a/src/game/game.scss
+++ b/src/game/game.scss
@@ -43,6 +43,11 @@ $token-colors: blue, green, orange, yellow, white, purple;
 		vertical-align: middle;
 	}
 
+	.center-margin {
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	.noselect {
 		-moz-user-select: none;
 		-webkit-user-select: none;
@@ -56,10 +61,16 @@ $token-colors: blue, green, orange, yellow, white, purple;
 		}
 	}
 
-	.dice-size {
+	.dice-shape-big {
 		border-radius: 10px;
 		width: 60px;
 		height: 60px;
+	}
+
+	.dice-shape-small {
+		border-radius: 7px;
+		width: 40px;
+		height: 40px;
 	}
 
 	.center {
@@ -263,18 +274,6 @@ $token-colors: blue, green, orange, yellow, white, purple;
 			position: absolute;
 			left: 50%;
 			transform-origin: 50% 300%;
-			.rolled-dice {
-				margin-left: auto;
-				margin-right: auto;
-				width: 40px;
-				height: 40px;
-				border-radius: 5px;
-				display: table;
-				.dice-text-wrapper {
-					display: table-cell;
-					vertical-align: middle;
-				}
-			}
 		}
 	}
 
